Enhance log display with RichEditBox and color output
Replaces the log TextBox with a RichEditBox to support colored log messages. Implements asynchronous log updates with color-coded status messages and hides the progress bar upon completion. Adds helper methods for appending colored text and converting color formats.

--- a/AppInstaller/Views/Main.xaml
+++ b/AppInstaller/Views/Main.xaml
@@ -15,8 +15,8 @@
             <RowDefinition Height="Auto"></RowDefinition>
         </Grid.RowDefinitions>
 
-        <TextBox x:Name="textbox_log" Grid.Row="0" TextWrapping="Wrap" IsSpellCheckEnabled="False" IsReadOnly="True" IsEnabled="False"></TextBox>
+        <RichEditBox x:Name="textbox_log" Grid.Row="0" TextWrapping="Wrap" IsSpellCheckEnabled="False" IsEnabled="False"/>
         <TextBlock Grid.Row="1"/>
-        <ProgressBar Grid.Row="2" IsIndeterminate="True" ShowPaused="False" ShowError="False" Padding="0, 0, 0,20" HorizontalAlignment="Stretch"/>
+        <ProgressBar x:Name="progressBar" Grid.Row="2" IsIndeterminate="True" ShowPaused="False" ShowError="False" Padding="0, 0, 0,20" HorizontalAlignment="Stretch"/>
     </Grid>
 </Page>
