--- a/AppInstaller/Views/Main.xaml
+++ b/AppInstaller/Views/Main.xaml
@@ -15,7 +15,7 @@
             <RowDefinition Height="Auto"></RowDefinition>
         </Grid.RowDefinitions>
 
-        <RichEditBox x:Name="textbox_log" Grid.Row="0" TextWrapping="Wrap" IsSpellCheckEnabled="False" IsEnabled="False"/>
+        <RichEditBox x:Name="textbox_log" Grid.Row="0" FontSize="11" TextWrapping="Wrap" IsSpellCheckEnabled="False" IsEnabled="False"/>
         <TextBlock Grid.Row="1"/>
         <ProgressBar x:Name="progressBar" Grid.Row="2" IsIndeterminate="True" ShowPaused="False" ShowError="False" Padding="0, 0, 0,20" HorizontalAlignment="Stretch"/>
     </Grid>
