--- a/AppInstaller/Views/Main.xaml
+++ b/AppInstaller/Views/Main.xaml
@@ -8,15 +8,20 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
-    <Grid Padding="10, 0, 10, 10">
+    <Grid Padding="10, 0, 10, 0">
         <Grid.RowDefinitions>
             <RowDefinition Height="*"></RowDefinition>
             <RowDefinition Height="Auto"></RowDefinition>
             <RowDefinition Height="Auto"></RowDefinition>
+            <RowDefinition Height="Auto"></RowDefinition>
         </Grid.RowDefinitions>
 
-        <RichEditBox x:Name="textbox_log" Grid.Row="0" FontSize="11" TextWrapping="Wrap" IsSpellCheckEnabled="False" IsEnabled="False"/>
+        <!--RichEditBox x:Name="textbox_log" Grid.Row="0" FontSize="11" TextWrapping="Wrap" IsSpellCheckEnabled="False" IsEnabled="False"/-->
+        <Border Grid.Row="0" BorderThickness="2" BorderBrush="Gray" Background="Black" CornerRadius="5" Padding="10, 5, 5, 10">
+            <RichTextBlock x:Name="RichTextBlock"/>
+        </Border>
         <TextBlock Grid.Row="1"/>
-        <ProgressBar x:Name="progressBar" Grid.Row="2" IsIndeterminate="True" ShowPaused="False" ShowError="False" Padding="0, 0, 0,20" HorizontalAlignment="Stretch"/>
+        <ProgressBar x:Name="progressBar" Grid.Row="2" IsIndeterminate="True" ShowPaused="False" ShowError="False"  HorizontalAlignment="Stretch"/>
+        <TextBlock Grid.Row="3" FontSize="7"/>
     </Grid>
 </Page>
