--- a/AppInstaller/Views/InstallPage.xaml
+++ b/AppInstaller/Views/InstallPage.xaml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Page
-    x:Class="AppInstaller.Views.Main"
+    x:Class="AppInstaller.Views.InstallPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:AppInstaller.Views"
