--- a/AppInstaller/Views/FirstTimeLaunchPage.xaml
+++ b/AppInstaller/Views/FirstTimeLaunchPage.xaml
@@ -10,7 +10,7 @@
 
     <Grid>
         <StackPanel Padding="10, 0, 10 , 0">
-            <TextBlock Text="Welcome!" HorizontalAlignment="Center" FontSize="28" Padding="10, 10, 10 ,10"/>
+            <TextBlock Text="Welcome!" HorizontalAlignment="Center" FontSize="28" Padding="0, 0, 0 ,10"/>
             <TextBlock Text="Please proceed with the installation of the App Installer." HorizontalAlignment="Center"/>
             <TextBlock/>
             <TextBox  PlaceholderText="Selected Install Location" />
@@ -18,6 +18,8 @@
             <CheckBox Content="Add Path Variable" IsChecked="True" IsEnabled="False"/>
             <TextBlock/>
             <Button Content="Install" HorizontalAlignment="Center"  Style="{StaticResource AccentButtonStyle}"/>
+            <TextBlock/>
+            <Button Content="Already Installed?" HorizontalAlignment="Center"/>
         </StackPanel>
     </Grid>
 </Page>
