Add Git repo input and improve install workflow
Introduces a Git repository URL field to the install prompt UI and wires up the Install button on the first-time launch page to navigate to the install prompt. Refactors Installer logic to enable ignore filters and directory cleanup, and updates AppConfig with new properties for versioning directories. Also adjusts main window size for improved layout.

--- a/AppInstaller/Views/FirstTimeLaunchPage.xaml
+++ b/AppInstaller/Views/FirstTimeLaunchPage.xaml
@@ -17,7 +17,7 @@
             <TextBlock/>
             <CheckBox Content="Add Path Variable" IsChecked="True" IsEnabled="False"/>
             <TextBlock/>
-            <Button Content="Install" HorizontalAlignment="Center"  Style="{StaticResource AccentButtonStyle}"/>
+            <Button Content="Install" HorizontalAlignment="Center"  Style="{StaticResource AccentButtonStyle}" Click="Install_Button_Click"/>
             <TextBlock/>
             <Button Content="Already Installed?" HorizontalAlignment="Center"/>
         </StackPanel>
