--- a/AppInstaller/Views/InstallPromptUser.xaml
+++ b/AppInstaller/Views/InstallPromptUser.xaml
@@ -8,41 +8,52 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
-    <Grid Padding="20, 0, 20 ,0">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-        </Grid.RowDefinitions>
-
-        <StackPanel Grid.Row="0">
-            <TextBlock Text="Application Name:" Padding="0, 0, 0, 10"/>
-            <TextBox PlaceholderText="Application Name" IsEnabled="False"/>
-            <TextBlock Text="Git Repo:" Padding="0, 15, 0, 10"/>
-            <TextBox PlaceholderText="Git Repo HTTPs URL" IsEnabled="True"/>
-            <TextBlock Text="Source Location:" Padding="0, 15, 0, 10"/>
-            <TextBox PlaceholderText="Source Directory Location" IsEnabled="False"/>
-            <TextBlock Text="Target Install Location:" Padding="0, 15, 0, 10"/>
-        </StackPanel>
-        
-         <Grid Grid.Row="1" >
+    <ScrollViewer>
+        <Grid Padding="20, 0, 20 ,0">
             <Grid.RowDefinitions>
-                <RowDefinition Height="Auto"></RowDefinition>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="Auto"/>
-                <ColumnDefinition Width="Auto"/>
-            </Grid.ColumnDefinitions>
 
-            <TextBox x:Name="selectedFilePath" Grid.Column="0" PlaceholderText="Selected Install Location" HorizontalAlignment="Stretch"/>
-            <TextBlock Grid.Column="1" Padding="5,0,0,0"/>
-            <Button Grid.Column="2" Content="Select Location" Click="Select_Folder_Click"/>
-        </Grid>
+            <StackPanel Grid.Row="0">
+                <TextBlock Text="Application Name:" Padding="0, 0, 0, 10"/>
+                <TextBox PlaceholderText="Application Name" IsEnabled="False"/>
+                <Expander Header="Git Repo Download">
+                    <StackPanel>
+                        <TextBox x:Name="textbox_Installed_Git_Version" PlaceholderText="Git Version" Header="Installed Version of Git:"/>
+                        <TextBlock/>
+                        <TextBlock Text="Git Repo:" Padding="0, 15, 0, 10"/>
+                        <TextBox PlaceholderText="Git Repo HTTPs URL" IsEnabled="True"/>
+                        <TextBlock/>
+                        <Button Content="Download" Click="Git_Repo_Download_Click"></Button>
+                    </StackPanel>
+                </Expander>
+          
+                <TextBlock Text="Source Location:" Padding="0, 15, 0, 10"/>
+                <TextBox PlaceholderText="Source Directory Location" IsEnabled="False"/>
+                <TextBlock Text="Target Install Location:" Padding="0, 15, 0, 10"/>
+            </StackPanel>
         
-        <StackPanel Grid.Row="2" Orientation="Horizontal" Padding="0, 20, 0, 0"  Spacing="10" HorizontalAlignment="Center">
-            <Button Content="Install" Style="{StaticResource AccentButtonStyle}" Click="Install_Button_Click"/>
-            <Button Content="Cancel" Click="Cancel_Button_Click"/>
-        </StackPanel>
-    </Grid>
+             <Grid Grid.Row="1" >
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"></RowDefinition>
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="Auto"/>
+                </Grid.ColumnDefinitions>
+
+                <TextBox x:Name="selectedFilePath" Grid.Column="0" PlaceholderText="Selected Install Location" HorizontalAlignment="Stretch"/>
+                <TextBlock Grid.Column="1" Padding="5,0,0,0"/>
+                <Button Grid.Column="2" Content="Select Location" Click="Select_Folder_Click"/>
+            </Grid>
+        
+            <StackPanel Grid.Row="2" Orientation="Horizontal" Padding="0, 20, 0, 0"  Spacing="10" HorizontalAlignment="Center">
+                <Button Content="Install" Style="{StaticResource AccentButtonStyle}" Click="Install_Button_Click"/>
+                <Button Content="Cancel" Click="Cancel_Button_Click"/>
+            </StackPanel>
+        </Grid>
+    </ScrollViewer>
 </Page>
