--- a/AppInstaller/Views/FirstTimeLaunchPage.xaml
+++ b/AppInstaller/Views/FirstTimeLaunchPage.xaml
@@ -13,6 +13,7 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
         <StackPanel Grid.Row="0">
             <TextBlock Text="Welcome!" HorizontalAlignment="Center" FontSize="28" Padding="0, 0, 0 ,10"/>
@@ -39,7 +40,21 @@
             <TextBlock/>
             <CheckBox x:Name="AddPathVariable" Content="Add Path Variable" IsChecked="False"/>
             <TextBlock/>
-            <Button Content="Install" HorizontalAlignment="Center" Style="{StaticResource AccentButtonStyle}" Click="Install_Button_Click"/>
+            
+            <Button Content="Install Page" HorizontalAlignment="Center"  Click="Install_Page_Button_Click"/>
         </StackPanel>
+
+        <Grid Grid.Row="3" HorizontalAlignment="Stretch">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto"/>
+            </Grid.ColumnDefinitions>
+            
+            <StackPanel Orientation="Horizontal">
+                <Button Content="Install" HorizontalAlignment="Center" Style="{StaticResource AccentButtonStyle}" Click="Install_Button_Click" MinWidth="100"/>
+                <TextBlock Padding="10, 0, 0, 0"/>
+                <Button Content="Skip for now" HorizontalAlignment="Center" Click="Skip_Button_Click" MinWidth="100"/>
+            </StackPanel>
+            
+        </Grid>
     </Grid>
 </Page>
