--- a/AppInstaller/Views/InstallPromptUser.xaml
+++ b/AppInstaller/Views/InstallPromptUser.xaml
@@ -14,28 +14,45 @@
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
 
             <StackPanel Grid.Row="0">
                 <TextBlock Text="Application Name:" Padding="0, 0, 0, 10"/>
                 <TextBox PlaceholderText="Application Name" IsEnabled="False"/>
-                <Expander Header="Git Repo Download">
-                    <StackPanel>
-                        <TextBox x:Name="textbox_Installed_Git_Version" PlaceholderText="Git Version" Header="Installed Version of Git:"/>
-                        <TextBlock/>
-                        <TextBlock Text="Git Repo:" Padding="0, 15, 0, 10"/>
-                        <TextBox PlaceholderText="Git Repo HTTPs URL" IsEnabled="True"/>
-                        <TextBlock/>
-                        <Button Content="Download" Click="Git_Repo_Download_Click"></Button>
-                    </StackPanel>
+                <TextBlock/>
+            </StackPanel>
+
+            <Expander Grid.Row="1"  Header="Git Repo Download" HorizontalAlignment="Stretch">
+                <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="Auto"/>
+                        </Grid.RowDefinitions>
+
+                    <TextBox Grid.Row="0" x:Name="textbox_Installed_Git_Version" PlaceholderText="Git Version" Header="Installed Version of Git:" IsEnabled="False"/>
+                    <TextBlock Grid.Row="1" FontSize="5"/>
+                    <TextBlock Grid.Row="2" Text="Git Repo:" Padding="0, 15, 0, 10"/>
+                    <TextBox Grid.Row="3" PlaceholderText="Git Repo HTTPs URL" IsEnabled="True"/>
+                    <TextBlock Grid.Row="4"/>
+                    <Button Grid.Row="5" Content="Download" Click="Git_Repo_Download_Click"/>
+                </Grid>
+                    
                 </Expander>
-          
+
+            <StackPanel Grid.Row="2">
                 <TextBlock Text="Source Location:" Padding="0, 15, 0, 10"/>
                 <TextBox PlaceholderText="Source Directory Location" IsEnabled="False"/>
                 <TextBlock Text="Target Install Location:" Padding="0, 15, 0, 10"/>
             </StackPanel>
+                
         
-             <Grid Grid.Row="1" >
+             <Grid Grid.Row="3" >
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto"></RowDefinition>
                 </Grid.RowDefinitions>
@@ -50,7 +67,7 @@
                 <Button Grid.Column="2" Content="Select Location" Click="Select_Folder_Click"/>
             </Grid>
         
-            <StackPanel Grid.Row="2" Orientation="Horizontal" Padding="0, 20, 0, 0"  Spacing="10" HorizontalAlignment="Center">
+            <StackPanel Grid.Row="4" Orientation="Horizontal" Padding="0, 20, 0, 0"  Spacing="10" HorizontalAlignment="Center">
                 <Button Content="Install" Style="{StaticResource AccentButtonStyle}" Click="Install_Button_Click"/>
                 <Button Content="Cancel" Click="Cancel_Button_Click"/>
             </StackPanel>
