--- a/AppInstaller/Views/FirstTimeLaunchPage.xaml
+++ b/AppInstaller/Views/FirstTimeLaunchPage.xaml
@@ -8,53 +8,37 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
-    <Grid Padding="10, 0, 10 , 0">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-        </Grid.RowDefinitions>
-        <StackPanel Grid.Row="0">
+    <ScrollViewer>
+        <StackPanel Padding="15, 0, 15, 0">
             <TextBlock Text="Welcome!" HorizontalAlignment="Center" FontSize="28" Padding="0, 0, 0 ,10"/>
             <TextBlock Text="Please proceed with the installation of the App Installer." HorizontalAlignment="Center" Padding="0, 0, 0, 20"/>
-        </StackPanel>
 
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"></RowDefinition>
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="Auto"/>
+                </Grid.ColumnDefinitions>
 
-        <Grid Grid.Row="1">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto"></RowDefinition>
-            </Grid.RowDefinitions>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="Auto"/>
-                <ColumnDefinition Width="Auto"/>
-            </Grid.ColumnDefinitions>
+                <TextBox x:Name="SelectedInstallLocation" Grid.Column="0" PlaceholderText="Selected Install Location"  Text="{Binding recommended_install_path}"/>
+                <TextBlock Grid.Column="1" Padding="5,0,0,0"/>
+                <Button Grid.Column="2" Content="Select Location" Click="Select_Folder_Location_Button_Click"/>
+            </Grid>
 
-            <TextBox x:Name="SelectedInstallLocation" Grid.Column="0" PlaceholderText="Selected Install Location"  Text="{Binding recommended_install_path}"/>
-            <TextBlock Grid.Column="1" Padding="5,0,0,0"/>
-            <Button Grid.Column="2" Content="Select Location" Click="Select_Folder_Location_Button_Click"/>
-        </Grid>
-
-        <StackPanel Grid.Row="2">
             <TextBlock/>
             <CheckBox x:Name="AddPathVariable" Content="Add Path Variable" IsChecked="False"/>
             <TextBlock/>
-            
-            <Button Content="Install Page" HorizontalAlignment="Center"  Click="Install_Page_Button_Click"/>
-        </StackPanel>
+            <Button Content="Install Page" HorizontalAlignment="Center"  Click="Install_Page_Button_Click" />
+            <TextBlock/>
 
-        <Grid Grid.Row="3" HorizontalAlignment="Stretch">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto"/>
-            </Grid.ColumnDefinitions>
-            
-            <StackPanel Orientation="Horizontal">
-                <Button Content="Install" HorizontalAlignment="Center" Style="{StaticResource AccentButtonStyle}" Click="Install_Button_Click" MinWidth="100"/>
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                <Button Content="Install" Style="{StaticResource AccentButtonStyle}" Click="Install_Button_Click" MinWidth="100"/>
                 <TextBlock Padding="10, 0, 0, 0"/>
-                <Button Content="Skip for now" HorizontalAlignment="Center" Click="Skip_Button_Click" MinWidth="100"/>
+                <Button Content="Skip for now" Click="Skip_Button_Click" MinWidth="100"/>
             </StackPanel>
-            
-        </Grid>
-    </Grid>
+        </StackPanel>
+    </ScrollViewer>
 </Page>
