--- a/AppInstaller/Views/InstallPromptUser.xaml
+++ b/AppInstaller/Views/InstallPromptUser.xaml
@@ -11,32 +11,23 @@
 
     <ScrollViewer>
         <StackPanel Padding="20, 0, 20 ,0">
-            <StackPanel>
-                <TextBlock Text="Application Name:" Padding="0, 0, 0, 10"/>
-                <TextBox PlaceholderText="Application Name" IsEnabled="False"/>
-                <TextBlock/>
-            </StackPanel>
-
             <Expander Header="Git Repo Download" HorizontalAlignment="Stretch" HorizontalContentAlignment="Stretch">
                 <StackPanel>
                     <TextBox  x:Name="textbox_Installed_Git_Version" PlaceholderText="Git Version" Header="Installed Version of Git:" IsEnabled="False" HorizontalAlignment="Stretch"/>
                     <TextBlock  FontSize="5"/>
                     <TextBlock Text="Git Repo:" Padding="0, 15, 0, 10"/>
-                    <TextBox PlaceholderText="Git Repo HTTPs URL" IsEnabled="True" HorizontalAlignment="Stretch"/>
+                    <TextBox x:Name="SelectedGitUrl" PlaceholderText="Git Repo HTTPs URL" IsEnabled="True" HorizontalAlignment="Stretch"/>
                     <TextBlock/>
-                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-                        <Button Content="Download Only" Click="Git_Repo_Download_Click" MinWidth="150" />
-                        <TextBlock Padding="10, 0, 0,0"/>
-                        <Button Content="Download and Install" Click="Git_Repo_Download_And_Install_Click" Style="{StaticResource AccentButtonStyle}" MinWidth="150"/>
+                    <Button Content="Download" Click="Git_Repo_Download_Click" MinWidth="150" Style="{StaticResource AccentButtonStyle}" HorizontalAlignment="Center"/>
                     </StackPanel>
-                </StackPanel>
             </Expander>
-
-            <StackPanel>
-                <TextBlock Text="Source Location:" Padding="0, 15, 0, 10"/>
-                <TextBox PlaceholderText="Source Directory Location" IsEnabled="False"/>
-                <TextBlock Text="Target Install Location:" Padding="0, 15, 0, 10"/>
-            </StackPanel>
+            
+            <TextBlock Text="Application Name:" Padding="0, 10, 0, 10"/>
+            <TextBox x:Name="textbox_appName"  PlaceholderText="Application Name" IsEnabled="False"/>
+            <TextBlock FontSize="5"/>
+            <TextBlock Text="Source Location:" Padding="0, 15, 0, 10"/>
+            <TextBox x:Name="textbox_source_directory" PlaceholderText="Source Directory Location" IsEnabled="False"/>
+            <TextBlock Text="Target Install Location:" Padding="0, 15, 0, 10"/>
 
             <Grid>
                 <Grid.ColumnDefinitions>
@@ -45,15 +36,16 @@
                     <ColumnDefinition Width="Auto"/>
                 </Grid.ColumnDefinitions>
 
-                <TextBox x:Name="selectedFilePath" Grid.Column="0" PlaceholderText="Selected Install Location" HorizontalAlignment="Stretch"/>
+                <TextBox x:Name="textbox_selectedFilePath" Grid.Column="0" PlaceholderText="Selected Install Location" HorizontalAlignment="Stretch"/>
                 <TextBlock Grid.Column="1" Padding="5,0,0,0"/>
                 <Button Grid.Column="2" Content="Select Location" Click="Select_Folder_Click"/>
             </Grid>
 
-            <StackPanel Grid.Row="4" Orientation="Horizontal" Padding="0, 20, 0, 0"  Spacing="10" HorizontalAlignment="Center">
+            <StackPanel Orientation="Horizontal" Padding="0, 20, 0, 0"  Spacing="10" HorizontalAlignment="Center">
                 <Button Content="Install" Style="{StaticResource AccentButtonStyle}" Click="Install_Button_Click"/>
                 <Button Content="Cancel" Click="Cancel_Button_Click"/>
             </StackPanel>
+            <TextBlock></TextBlock>
         </StackPanel>
     </ScrollViewer>
 </Page>
