--- a/AppInstaller/Views/FirstTimeLaunchPage.xaml
+++ b/AppInstaller/Views/FirstTimeLaunchPage.xaml
@@ -29,9 +29,7 @@
             </Grid>
 
             <TextBlock/>
-            <CheckBox x:Name="AddPathVariable" Content="Add Path Variable" IsChecked="False"/>
-            <TextBlock/>
-            <Button Content="Install Page" HorizontalAlignment="Center"  Click="Install_Page_Button_Click" />
+            <CheckBox x:Name="AddPathVariable" Content="Add Path Variable" IsChecked="True"/>
             <TextBlock/>
 
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
