Refactored and added documentation throughout the codebase.
Enables the app updated to valid app updates to embed additional safety in the application update process.

--- a/AppInstaller/MainWindow.xaml
+++ b/AppInstaller/MainWindow.xaml
@@ -23,7 +23,7 @@
                 <RowDefinition Height="Auto"></RowDefinition>
             </Grid.RowDefinitions>
 
-            <TextBlock Grid.Row="0"  Text="App Installer" FontSize="26" HorizontalAlignment="Center" Padding="0, 10, 0, 10"/>
+            <TextBlock Grid.Row="0"  Text="{Binding AppName}" FontSize="26" HorizontalAlignment="Center" Padding="0, 10, 0, 10"/>
             <ProgressBar Grid.Row="1" Padding="0, 0, 0, 10"/>
             <Frame Grid.Row="2" x:Name="contentFrame"/>
             <TextBlock Grid.Row="3" Text="{Binding VersionText}" FontSize="10" Foreground="Gray" HorizontalAlignment="Center" VerticalAlignment="Bottom" Padding="0, 0,0,0"/>
