--- a/AppInstaller/Views/FirstTimeLaunchPage.xaml
+++ b/AppInstaller/Views/FirstTimeLaunchPage.xaml
@@ -29,7 +29,7 @@
             </Grid>
 
             <TextBlock/>
-            <CheckBox x:Name="checkbox_AddPathVariable" Content="Add Path Variable" IsChecked="True"/>
+            <CheckBox x:Name="checkbox_AddPathVariable" Content="Add Path Variable" IsChecked="True" IsEnabled="False"/>
             <TextBlock/>
 
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
