--- a/AppInstaller/Views/InstallPromptUser.xaml
+++ b/AppInstaller/Views/InstallPromptUser.xaml
@@ -26,7 +26,7 @@
             <TextBox x:Name="textbox_appName"  PlaceholderText="Application Name" IsEnabled="False"/>
             <TextBlock FontSize="5"/>
             <TextBlock Text="Source Location:" Padding="0, 15, 0, 10"/>
-            <TextBox x:Name="textbox_source_directory" PlaceholderText="Source Directory Location" IsEnabled="True"/>
+            <TextBox x:Name="textbox_source_directory" PlaceholderText="Source Directory Location" IsEnabled="False"/>
             <TextBlock Text="Target Install Location:" Padding="0, 15, 0, 10"/>
 
             <Grid>
